[package]
name = "storage"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.40"

[dependencies.web-sys]
version = "0.3.17"
features = [
    "Window",
    "Storage",
    "DomException",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.40"
